# skrl

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py  training.py
.github/: GITHUB_ACTIONS.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  config.yml  question.md
.github/workflows/: manual.yml  pre-commit.yaml  pre-commit.yml  python-publish-manual.yml  python-publish.yml  python-test-torch.yml  python-test.yml  tests-jax.yml  tests-torch.yml  tests-warp.yml
agents/: base.py
agents/ddpg/: __init__.py  ddpg.py
agents/ppo/: __init__.py
agents/sac/: __init__.py  sac.py
agents/td3/: __init__.py  td3.py
docs/: README.md  requirements.txt
docs/source/: 404.rst  conf.py  index.rst
env/: __init__.py  base.py  base_env.py  wrapper.py
examples/: run.bash
examples/bidexhands/: jax_bidexhands_shadow_hand_over_ippo.py  jax_bidexhands_shadow_hand_over_mappo.py  torch_bidexhands_shadow_hand_over_ippo.py  torch_bidexhands_shadow_hand_over_mappo.py
examples/brax/: jax_brax_inverted_pendulum_ppo.py  torch_brax_inverted_pendulum_ppo.py
examples/deepmind/: dm_manipulation_stack_sac.py  dm_suite_cartpole_swingup_ddpg.py  torch_dm_cartpole_swingup_ddpg.py  torch_dm_manipulation_stack_sac.py
examples/gym/: jax_gym_cartpole_cem.py  jax_gym_cartpole_dqn.py  jax_gym_cartpole_vector_dqn.py  jax_gym_pendulum_ddpg.py  jax_gym_pendulum_ppo.py  jax_gym_pendulum_sac.py  jax_gym_pendulum_td3.py  jax_gym_pendulum_vector_ddpg.py  torch_gym_cartpole_cem.py  torch_gym_cartpole_dqn.py  torch_gym_cartpole_vector_dqn.py  torch_gym_frozen_lake_q_learning.py  torch_gym_frozen_lake_vector_q_learning.py  torch_gym_pendulum_ddpg.py  torch_gym_pendulum_ddpg_td3_sac_parallel_unshared_memory.py  torch_gym_pendulum_ddpg_td3_sac_sequential_shared_memory.py  torch_gym_pendulum_ddpg_td3_sac_sequential_unshared_memory.py  torch_gym_pendulum_ppo.py  torch_gym_pendulum_sac.py  torch_gym_pendulum_td3.py  torch_gym_pendulum_trpo.py  torch_gym_pendulum_vector_ddpg.py  torch_gym_pendulumnovel_ddpg.py  torch_gym_pendulumnovel_ddpg_gru.py  torch_gym_pendulumnovel_ddpg_lstm.py  torch_gym_pendulumnovel_ddpg_rnn.py  torch_gym_pendulumnovel_ppo.py  torch_gym_pendulumnovel_ppo_gru.py  torch_gym_pendulumnovel_ppo_lstm.py  torch_gym_pendulumnovel_ppo_rnn.py  torch_gym_pendulumnovel_sac.py  torch_gym_pendulumnovel_sac_gru.py  torch_gym_pendulumnovel_sac_lstm.py  torch_gym_pendulumnovel_sac_rnn.py  torch_gym_pendulumnovel_td3.py  torch_gym_pendulumnovel_td3_gru.py  torch_gym_pendulumnovel_td3_lstm.py  torch_gym_pendulumnovel_td3_rnn.py  torch_gym_pendulumnovel_trpo.py  torch_gym_pendulumnovel_trpo_gru.py  (+4 more)
examples/gymnasium/: jax_gymnasium_cartpole_cem.py  jax_gymnasium_cartpole_dqn.py  jax_gymnasium_cartpole_vector_dqn.py  jax_gymnasium_pendulum_ddpg.py  jax_gymnasium_pendulum_ppo.py  jax_gymnasium_pendulum_sac.py  jax_gymnasium_pendulum_td3.py  jax_gymnasium_pendulum_vector_ddpg.py  torch_gymnasium_cartpole_cem.py  torch_gymnasium_cartpole_dqn.py  torch_gymnasium_cartpole_vector_dqn.py  torch_gymnasium_frozen_lake_q_learning.py  torch_gymnasium_frozen_lake_vector_q_learning.py  torch_gymnasium_pendulum_ddpg.py  torch_gymnasium_pendulum_ddpg_td3_sac_parallel_unshared_memory.py  torch_gymnasium_pendulum_ddpg_td3_sac_sequential_shared_memory.py  torch_gymnasium_pendulum_ddpg_td3_sac_sequential_unshared_memory.py  torch_gymnasium_pendulum_ppo.py  torch_gymnasium_pendulum_sac.py  torch_gymnasium_pendulum_td3.py  torch_gymnasium_pendulum_trpo.py  torch_gymnasium_pendulum_vector_ddpg.py  torch_gymnasium_pendulumnovel_ddpg.py  torch_gymnasium_pendulumnovel_ddpg_gru.py  torch_gymnasium_pendulumnovel_ddpg_lstm.py  torch_gymnasium_pendulumnovel_ddpg_rnn.py  torch_gymnasium_pendulumnovel_ppo.py  torch_gymnasium_pendulumnovel_ppo_gru.py  torch_gymnasium_pendulumnovel_ppo_lstm.py  torch_gymnasium_pendulumnovel_ppo_rnn.py  torch_gymnasium_pendulumnovel_sac.py  torch_gymnasium_pendulumnovel_sac_gru.py  torch_gymnasium_pendulumnovel_sac_lstm.py  torch_gymnasium_pendulumnovel_sac_rnn.py  torch_gymnasium_pendulumnovel_td3.py  torch_gymnasium_pendulumnovel_td3_gru.py  torch_gymnasium_pendulumnovel_td3_lstm.py  torch_gymnasium_pendulumnovel_td3_rnn.py  torch_gymnasium_pendulumnovel_trpo.py  torch_gymnasium_pendulumnovel_trpo_gru.py  (+7 more)
examples/isaacgym/: jax_allegro_hand_ppo.py  jax_ant_ddpg.py  jax_ant_ppo.py  jax_ant_sac.py  jax_ant_td3.py  jax_anymal_ppo.py  jax_anymal_terrain_ppo.py  jax_ball_balance_ppo.py  jax_cartpole_ppo.py  jax_factory_task_nut_bolt_pick_ppo.py  jax_factory_task_nut_bolt_place_ppo.py  jax_factory_task_nut_bolt_screw_ppo.py  jax_franka_cabinet_ppo.py  jax_franka_cube_stack_ppo.py  jax_humanoid_ppo.py  jax_ingenuity_ppo.py  jax_quadcopter_ppo.py  jax_shadow_hand_ppo.py  jax_trifinger_ppo.py  torch_allegro_hand_ppo.py  torch_allegro_kuka_ppo.py  torch_ant_ddpg.py  torch_ant_ddpg_td3_sac_parallel_unshared_memory.py  torch_ant_ddpg_td3_sac_sequential_shared_memory.py  torch_ant_ddpg_td3_sac_sequential_unshared_memory.py  torch_ant_ppo.py  torch_ant_sac.py  torch_ant_td3.py  torch_anymal_ppo.py  torch_anymal_terrain_ppo.py  torch_ball_balance_ppo.py  torch_cartpole_ppo.py  torch_franka_cabinet_ppo.py  (+11 more)
memories/: __init__.py  base.py  prioritized.py  random.py
memory/: __init__.py  base.py  random.py
skrl/: __init__.py  training.py  version.txt
tests/: stategies.py  strategies.py  test_agents.py  test_envs.py  test_examples_deepmind.py  test_examples_gym.py  test_examples_gymnasium.py  test_examples_isaac_orbit.py  test_examples_isaacgym.py  test_examples_isaacsim.py  test_examples_omniisaacgym.py  test_examples_robosuite.py  test_examples_shimmy.py  test_jax_config.py  test_jax_memories_memory.py  test_memories.py  test_model_instantiators.py  test_noises_gaussian.py  test_noises_ornstein_uhlenbeck.py  test_resources_noises.py  test_resources_preprocessors.py  test_resources_schedulers.py  test_torch_config.py  test_trainers.py  test_warp_config.py  utilities.py  utils.py
utils/: isaacgym_utils.py
(+1167 files in other folders)
